writing through 1/21 edition

--- a/newsletter/2024-01-21.md
+++ b/newsletter/2024-01-21.md
@@ -1,4 +1,4 @@
-# Let the market settle your arguments, crypto bros.
+# Let markets do more of the talking, crypto bros.
 ## #W3W: Jan. 14-20, 2024
 
 ![]()
@@ -7,17 +7,29 @@
 
 <!-- Lead item. ~450 words -->
 
+MicroStrategy founder and bitcoin whale Michael Saylor is battling against AI-generated deepfake videos promoting crypto scams using his image without permission. https://www.msn.com/en-us/news/technology/michael-saylor-battles-against-ai-generated-deepfake-videos-promoting-bitcoin-scams/ar-AA1mZgnO
+
+<!--
+Some very important but unsurprising news to pass along:
+
+Perhaps shilling a coin so hard, so often, on live television was never a good idea to begin with.
+
 Riff on Saylor.
 
-Michael Saylor is battling against AI-generated deepfake videos promoting bitcoin scams using his image without permission. https://www.msn.com/en-us/news/technology/michael-saylor-battles-against-ai-generated-deepfake-videos-promoting-bitcoin-scams/ar-AA1mZgnO
 
-I'm sympathetic about his plight, for the most part. But perhaps this underscores why 
+I'm sympathetic about his plight, for the most part. But perhaps this underscores why
 
 Know what you never fucking hear Michael Saylor give an interview about?
 
 Tech consulting.
 
+Bitcoin rose almost 160% last year. It's up 20
+
+That's the argument. That's it. If someone wants to
+
 Oh, yeah. Remember that?
+
+-->
 
 # Week in Review
 
@@ -85,7 +97,7 @@ Cutting room floor...
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
-_**Have a comment on the newsletter? Please share it with the hashtag #w3w on X/Twitter or LinkedIn. We'll continue the conversation there. 😉**_
+_**Have a comment on the newsletter? Please share it with the hashtag #w3w on X/Twitter or LinkedIn. We'll continue the conversation there.**_ 😉
 
 _**If you would like to reach me directly with a story suggestion or anything else, please email peter[at]w3w.news.**_
 
