--- a/newsletter/2024-01-28.md
+++ b/newsletter/2024-01-28.md
@@ -1,4 +1,4 @@
-# My 10 favorite business books for 2024
+# tktktkt
 ## #W3W: Jan. 21-27, 2024
 
 ![Books on a cart](https://images.unsplash.com/photo-1495446815901-a7297e633e8d)
@@ -30,27 +30,35 @@ Lead item. ~450 words: Riff on favorite business books I've read in the past 12 
 
 - **[War at the Wall Street Journal](https://www.amazon.com/War-Wall-Street-Journal-Struggle/dp/0547152434/ref=sr_1_1?keywords=war+at+the+wall+street+journal&sr=8-1) by Sarah Ellison:** tktk
 
-# Week in Review
-- BTC selloff continues <!-- check market move late in the week -->
+Now, let's get to the latest news...
 
-- https://www.theblock.co/post/274009/bis-confirms-tokenization-project-as-part-of-six-projects-for-2024
+# Week in Review
+
+- **BlackRock's exchange-traded fund** (ETF) for bitcoin is the first to [reach $2 billion](https://www.coindesk.com/markets/2024/01/26/blackrocks-bitcoin-etf-first-to-reach-2b-in-aum/) in assets under management. But the token's spot price is still [in the red](https://www.coindesk.com/consensus-magazine/2024/01/26/why-is-everyone-suddenly-bearish-about-bitcoin/) since such funds gained SEC approval earllier this month. Much of the selling has come from investors [exiting the Grayscale Bitcoin Trust](https://www.coindesk.com/markets/2024/01/24/grayscales-gbtc-has-moved-more-than-100k-btc-to-exchange-since-spot-bitcoin-etf-launch/). (CoinDesk)
 
 - **Mt. Gox seems to be moving closer to repaying victims** in bitcoin for their losses in a notorious 2014 exchange hack. An estimated $33 billion was stolen in the incident. ([CoinDesk](https://www.coindesk.com/business/2024/01/23/mt-gox-moves-seemingly-closer-to-bitcoin-repayments-for-2014-hack-victims/))
 
-- **OKX suffered** a "flash crash" Tuesday. ([CoinDesk](https://www.coindesk.com/business/2024/01/23/crypto-exchange-okxs-token-suffers-50-flash-crash-amid-liquidation-cascade/))
+- **Discovery of a software bug** delayed the rollout of new smart-contract features on Stellar. ([CoinDesk](https://www.coindesk.com/tech/2024/01/27/stellars-foundation-supports-delay-of-smart-contracts-upgrade-after-bug-found/))
 
 - Recent SEC Twitter hack was a SIM swapping attack. <!-- Need link -->
 
-- JPM analysts downgraded Coinbase shares Tuesday: https://cointelegraph.com/news/jpmorgan-downgrades-coinbase-stock-underweight
+- **OKX suffered** a "flash crash" Tuesday. ([CoinDesk](https://www.coindesk.com/business/2024/01/23/crypto-exchange-okxs-token-suffers-50-flash-crash-amid-liquidation-cascade/))
 
-- https://cointelegraph.com/news/us-lawmaker-maxine-waters-asks-meta-its-crypto-trademark-plans
+- Bitcoin Ordinals inscription marks the first individual poem sale at Sotheby's, enabling artists to sell their work as NFTs directly on the Bitcoin blockchain: <https://decrypt.co/214475/bitcoin-ordinals-inscription-marks-first-individual-poem-sale-sothebys>
 
-- Casey on AI and crypto staying separate at Davos. https://www.coindesk.com/consensus-magazine/2024/01/23/at-davos-crypto-pushes-case-for-decentralized-ai/
+- Coinbase receives an upgrade from Oppenheimer to "outperform," highlighting its strength compared to what many people realize: <https://www.coindesk.com/business/2024/01/26/coinbase-upgraded-by-oppenheimer-as-crypto-exchange-stronger-than-many-people-realize/>
 
-- https://cointelegraph.com/news/ai-artificial-intelligence-deepfakes-fool-voters-politicians-2024-us-presidential-elections
+- Bank for International Settlements (BIS) confirms a tokenization project as part of six projects for 2024, aiming to explore the potential benefits and risks of tokenization: <https://www.theblock.co/post/274009/bis-confirms-tokenization-project-as-part-of-six-projects-for-2024>
 
-- Fortune: From unicorns to unicorpses. https://fortune.com/longform/failed-unicorn-startups-billion-dollar-valuation-unicorpses/
+- JPMorgan downgrades Coinbase stock to "underweight," indicating a belief that the stock's price will decrease: <https://cointelegraph.com/news/jpmorgan-downgrades-coinbase-stock-underweight>
 
+- US lawmaker Maxine Waters asks Meta about its crypto trademark plans, emphasizing the need for transparency and regulatory clarity: <https://cointelegraph.com/news/us-lawmaker-maxine-waters-asks-meta-its-crypto-trademark-plans>
+
+- At Davos, crypto advocates push for decentralized AI, emphasizing its potential to address issues of trust, transparency, and security: <https://www.coindesk.com/consensus-magazine/2024/01/23/at-davos-crypto-pushes-case-for-decentralized-ai/>
+
+- AI-generated deepfakes could potentially influence the 2024 US presidential elections, raising concerns about voter manipulation and political deception: <https://cointelegraph.com/news/ai-artificial-intelligence-deepfakes-fool-voters-politicians-2024-us-presidential-elections>
+
+- An examination of "unicorpses," failed unicorn startups that once had billion-dollar valuations but ultimately didn't succeed: <https://fortune.com/longform/failed-unicorn-startups-billion-dollar-valuation-unicorpses/>
 
 - **The U.S. stock markets' valuation remains insanely concentrated around Big Tech.** Five of the S&P 500's 11 industry sectors carry a lower weighting in the index than a single "Magnificent Seven" tech stock. https://www.linkedin.com/posts/spencer-jakab-43b635b_oilandgas-technology-investing-activity-7155559846962995200-2W5Y/
 
@@ -61,6 +69,8 @@ Lead item. ~450 words: Riff on favorite business books I've read in the past 12 
 - Good-bye, Substack. https://slate.com/business/2024/01/substack-local-journalism-food-section.html
 
 - Doom is now on Dogecoin. https://www.coindesk.com/markets/2024/01/24/someone-just-put-90s-darling-game-doom-on-dogecoin/
+
+- **No fighting in the War Room!** Monday marks the 60th anniversary of the release of Stanley Kubrick's classic Cold War satire [Dr. Strangelove](https://www.rottentomatoes.com/m/dr_strangelove). Considering that the world in 2024 is still threatened by an unreformed KGB agent, American politics is generally cracking up, and the number of other countries with nukes has mushroomed, I'd say this one is timely as ever.
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
