--- a/newsletter/2024-01-28.md
+++ b/newsletter/2024-01-28.md
@@ -8,11 +8,11 @@
 
 So here we go. In no particular order, here are my 10 favorite titles that I've read over the past 12 months regarding technology and business:
 
-- **[Number Go Up](https://www.amazon.com/Number-Go-Up-Cryptos-Staggering/dp/0593443810/ref=sr_1_1?keywords=number+go+up&sr=8-1) by Zeke Faux:** Since the Crypto Winter of 2022, there have been several books delving into what went wrong, the excesses that even predated the collapse, and so on. This is one of the better ones, by an investigative reporter for Bloomberg News.
+- **[Number Go Up](https://www.amazon.com/Number-Go-Up-Cryptos-Staggering/dp/0593443810/ref=sr_1_1?keywords=number+go+up&sr=8-1) by Zeke Faux:** Since the Crypto Winter of 2022, there have been several books delving into what went wrong, the excesses that predated the collapse, and so on. This is one of the better ones, by an investigative reporter for Bloomberg News.
 
 - **[The Fiat Standard](https://www.amazon.com/Fiat-Standard-Slavery-Alternative-Civilization/dp/1544526474/ref=sr_1_1?keywords=fiat+standard&sr=8-1) by Saifedean Ammous:** This book is a followup to Ammous's earlier touchstone, the Bitcoin Standard, which explored how and why bitcoin could someday become the basis of the global economy. With the Fiat Standard, he sort of turns the frame inside-out, exploring what's wrong with the conventional money we use everday. In some ways, I think that approach might be even more compelling to newbies.
 
-- **[Easy Money](https://www.amazon.com/Easy-Money-Cryptocurrency-Casino-Capitalism/dp/1419766392/ref=sr_1_4?keywords=Easy+Money&sr=8-4) by by Ben McKenzie and Jacob Silverman:** It's no small statement to say this is an even more stridently crypto-skeptical take than Zeke Faux's book. In this one, a TV actor and a financial journalist team up to explore the last bull market and the worst of its bad actors. While I don't ultimately agree with the authors' blanket dismissal of the industry, I do think books like this are worth a read to get outside our own echo chamber. It's the only real way to understand the perceptions and very real obstacles to mass adoption that exist -- and thus address them. Also, the part where the U.S. government rather ham-handedly tries to recruit the authors as informants was actually pretty entertaining. 😂
+- **[Easy Money](https://www.amazon.com/Easy-Money-Cryptocurrency-Casino-Capitalism/dp/1419766392/ref=sr_1_4?keywords=Easy+Money&sr=8-4) by Ben McKenzie and Jacob Silverman:** It's no small statement to say this is an even more stridently crypto-skeptical take than Zeke Faux's book. In this one, a TV actor and a financial journalist team up to explore the last bull market and the worst of its bad actors. While I don't ultimately agree with the authors' blanket dismissal of the industry, I do think books like this are worth a read to get outside our own echo chamber. It's the only real way to understand the perceptions and very real obstacles to mass adoption that exist -- and thus address them. Also, the part where the U.S. government rather ham-handedly tries to recruit the authors as informants was actually pretty entertaining. 😂
 
 - **[Digital Minimalism](https://www.amazon.com/Digital-Minimalism-Choosing-Focused-Noisy/dp/0525536515/ref=sr_1_1?keywords=digital+minimalism&sr=8-1) by Cal Newport:** A great guide to engaging intentionally, not mindlessly, with our smartphones and other tech tools. Yes, they can enrich our lives in some ways. But sometimes you also need to put your phone down and go outside for a walk. Newport wants to help you strike that balance.
 
