--- a/newsletter/2024-01-28.md
+++ b/newsletter/2024-01-28.md
@@ -1,4 +1,4 @@
-# 10 long overdue book picks
+# 10 good reads for 2024 
 ## #W3W: Jan. 21-27, 2024
 
 ![Books on a cart](https://images.unsplash.com/photo-1495446815901-a7297e633e8d)
