fleshing out summary items

--- a/newsletter/2024-02-11.md
+++ b/newsletter/2024-02-11.md
@@ -1,4 +1,4 @@
-# tktktk
+# Big Tech tktk
 ## #w3w: Feb. 4-10, 2024
 
 ![People playing Monopoly](https://images.unsplash.com/photo-1640461470346-c8b56497850a)
@@ -20,52 +20,31 @@ Lead item. ~450 words. Riff on absence of Big Tech in crypto and why it matters.
 
 # Week in Review
 
-- Miners are jockeying for position in the upcoming bitcoin halving. https://decrypt.co/216101/bitcoin-halving-nears-and-btc-miner-cleanspark-is-preparing-for-lower-fees
+- **Bitcoin leapt 11% for the week** and [touched a two-year high](https://www.investors.com/news/bitcoin-price-above-47000-bitcoin-etf-launch-crypto-prices-rally/) above $48,000 thanks to [strong inflows](https://www.msn.com/en-us/money/markets/bitcoin-tastes-48-000-as-ethereum-and-avalanche-follow-led-by-record-etf-asset-inflows-the-week-in-retrospect/ar-BB1i4Wu1) of new investment into exchange-traded funds tracking the token. Meanwhile, miners are [jockeying for position](https://decrypt.co/216101/bitcoin-halving-nears-and-btc-miner-cleanspark-is-preparing-for-lower-fees) in the upcoming halving, a periodic event in which rewards for minting new tokens are reduced for the sake of limiting supply and controlling inflation.
 
-- Coinbase shares slid Monday. Worries that bitcoin ETF isn't working in their favor. <!-- Need links -->
+- **Consensys announced** that its popular MetaMask wallet will [integrate with Robinhood's platform](https://finance.yahoo.com/news/metamask-robinhood-connect-integrate-easier-150000873.html) to enable easier crypto trading for users.
 
-- Binance delisted Monero. https://decrypt.co/215981/monero-binance-delists-xmr
+- **Solana Labs** said that a five-hour network outage on Tuesday was caused by a bug developers spotted a week earlier on their testnet. ([CryptoSlate](https://cryptoslate.com/solana-outage-was-caused-by-infinite-loop-bug-previously-seen-on-devnet/))
 
-- Robinhood integrated with MetaMask. https://decrypt.co/216091/robinhood-metamask-crypto-ethereum | https://www.coindesk.com/business/2024/02/06/metamask-deal-with-robinhood-broadens-crypto-access/
+- **Binance said** it will delist four tokens on Feb. 20, [including Monero](https://decrypt.co/215981/monero-binance-delists-xmr).
 
-- Solana suffered outages. https://decrypt.co/216095/solana-price-rebounds-network-restarts-after-outage | https://www.coindesk.com/markets/2024/02/06/solana-network-suffers-brief-outage-sol-steady/
-https://www.coindesk.com/markets/2024/02/06/solana-network-suffers-brief-outage-sol-steady/
+- The New York attorney general, Letitia James, has filed a lawsuit against the Winklevoss twins for their involvement in a $1 billion crypto fraud. [Source: <https://www.theguardian.com/us-news/2024/feb/09/new-york-attorney-general-crypto-fraud-lawsuit-winklevoss-twins-letitia-james>]
 
-<!-- Candidates...
+- California is proposing new legislation to regulate the use of artificial intelligence. The proposed law aims to protect consumers from potential harm caused by AI. [Source: <https://www.washingtonpost.com/technology/2024/02/08/california-legislation-artificial-intelligence-regulation/>]
 
-https://www.coindesk.com/consensus-magazine/2023/12/22/2024-the-revenge-of-bitcoin/
+- Two executives from Haru Invest have been arrested in South Korea for allegedly stealing 828 million won (~$660,000) worth of cryptocurrency. [Source: <https://www.coindesk.com/policy/2024/02/06/haru-invest-execs-arrested-in-south-korea-for-allegedly-stealing-828m-worth-of-crypto-report/>]
 
-https://www.coindesk.com/consensus-magazine/2023/12/20/blockchain-tech-predictions-for-2024-from-experts-at-ripple-coinbase-a16z-starknet/
+- Contrary to popular belief, China never completely banned cryptocurrency. The Chinese government has instead restricted crypto trading and mining, but individuals can still legally hold and transfer cryptocurrencies. [Source: <https://www.coindesk.com/consensus-magazine/2024/02/05/china-never-completely-banned-crypto/>]
 
-https://www.coindesk.com/consensus-magazine/2023/12/19/how-asia-drives-the-next-crypto-bull-market/
-
-https://www.washingtonpost.com/technology/2024/02/08/california-legislation-artificial-intelligence-regulation/
-
-https://www.coindesk.com/policy/2024/02/06/haru-invest-execs-arrested-in-south-korea-for-allegedly-stealing-828m-worth-of-crypto-report/
-
-https://decrypt.co/215975/archaeologists-ai-ancient-scrolls-mount-vesuvius
-
-https://www.coindesk.com/consensus-magazine/2024/02/05/china-never-completely-banned-crypto/
-
-https://www.coindesk.com/consensus-magazine/2024/01/31/chris-dixon-talks-techno-optimism-permissionless-innovation-and-the-need-for-crypto/
-
-https://www.404media.co/woman-got-cremation-ads-in-the-mail-after-getting-chemotherapy/
-
-https://www.wsj.com/health/wellness/early-sleep-bedtime-6ecd1d67?st=s36a1jmdhnvmhvu&reflink=desktopwebshare_permalink
-
-https://www.coindesk.com/policy/2024/02/09/uks-planned-stablecoin-rules-need-reworking-crypto-advocates-say/
-
-https://www.coindesk.com/markets/2024/02/09/defi-platform-pendle-nears-1b-in-total-value-locked/
-
-https://www.coindesk.com/policy/2024/02/09/new-york-expands-fraud-case-against-digital-currency-group-to-3-billion/
-
-https://www.coindesk.com/markets/2024/02/09/bitcoin-tops-47k-as-spot-bitcoin-etfs-book-one-of-their-best-days/
-
-https://www.coindesk.com/consensus-magazine/2023/12/22/the-unified-future-of-ai-blockchain-and-virtual-worlds-in-2024/
-
--->
+- Archaeologists in Italy are using AI to read unreadable ancient scrolls discovered in the ruins of Pompeii. The AI-powered technology can decipher the charred and disintegrated scrolls, providing new insights into ancient history. [Source: <https://decrypt.co/215975/archaeologists-ai-ancient-scrolls-mount-vesuvius>]
 
 # Odds & Ends
+
+
+- "Black Mirror" is set to release a new Web3 game, "Smile to Earn Experience," developed by Pixelynx. The game will allow players to earn cryptocurrency by smiling at their devices. [Source: <https://decrypt.co/215410/black-mirror-goes-web3-with-pixelynx-smile-to-earn-experience>]
+
+- Cryptocurrency companies were absent from Super Bowl LVI ads, despite the growing popularity of cryptocurrencies. This absence may be due to the volatile nature of the crypto market and the potential regulatory risks. [Source: <https://www.foxbusiness.com/markets/crypto-absent-again-super-bowl-ads>]
+
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
