fleshing out lede item

--- a/newsletter/2024-02-11.md
+++ b/newsletter/2024-02-11.md
@@ -1,10 +1,78 @@
-# Big Tech tktk
+#Big Tech tktktktkt
+<!--
+
+Some headline possibilities...
+
+# Big Tech has barely touched web3. Great.
+# How has web3 succeeded without Big Tech?
+
+-->
 ## #w3w: Feb. 4-10, 2024
 
 ![People playing Monopoly](https://images.unsplash.com/photo-1640461470346-c8b56497850a)
 *Photo by [Maria Lin Kim](https://unsplash.com/@mrsmaria) via Unsplash*
 
+**Imagine a new technology** growing to trillions of dollars in market value in less than 20 years, largely without involvement by U.S.-based Big Tech. In fact, more than 70% of its valuation comes from software that's fully open source, *including even the systems' algorithms*.
+
+To me, that sounds like a raging success story. It is of course also the story of blockchain technology, dominated (so far) by the open Bitcoin and Ethereum networks.
+
+But the story often isn't told in quite those terms, is it?
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!--
+
+- What do you think a counterweight to big tech looks like?
+
+- 
+
+
+
+
+
+But the story often isn't told in terms like the ones I used just now, is it?
+
+News flash: Anything that involves human beings and money is subject to scams. Yes, crypto has them. But so does the stock market. So does real estate. So do umpteen other markets. Do you just dismiss all of them out of hand?
+
+Yes, there are scammers, and there are honest people trying to build things of actual value. Both parts are true at once.
+
+
+
+Jack Grubman. Did that mean that Amazon was always a scam? No, Jack Grubman's research about Amazon's stock was a scam. But Amazon had real long-term value.
+
+- Confusing tech with tech companies.
+
+- Creating false dichotomies.
+
+-
+
+
+
+
+
+If I were a company on the short end of Big Tech's increasingly anticompetitive practices -- which describes pretty much every company in the world -- I would wonder if this amazing software might be useful to me. At the very least, I'd study how it succeeded very closely, for  
+
+It's of course also the story of blockchain's rise, dominated by just two open-source projects, Bitcoin and Ethereum.
+
+
+What do you think that looks like in the real world? And if this isn't it, what would be?
+
+In the abstract, I think that sounds like a raging success story to most people.
+
+Specifically, it describes blockchain to a tee.
+
+They frame the story in terms of Big Tech. Bluntly, they suck at covering open standards in general.
 
 Lead item. ~450 words. Riff on absence of Big Tech in crypto and why it matters.
 
@@ -12,9 +80,7 @@ Lead item. ~450 words. Riff on absence of Big Tech in crypto and why it matters.
 
 - Big Tech's absence is mostly a blessing in crypto, but also has some downsides. There is less attention paid.
 
-- Crypto offers better investment returns than Big Tech, but less of a cultural footprint among users.
-
-- It's an underrated achievement of crypto that it's grown into a multitrillion-dollar industry with minimal involvement by Big Tech.
+- It's an underrated achievement of crypto that it's grown into a multitrillion-dollar industry in less than 20 years with minimal involvement by Big Tech.
 
 -->
 
@@ -28,23 +94,17 @@ Lead item. ~450 words. Riff on absence of Big Tech in crypto and why it matters.
 
 - **Binance said** it will delist four tokens on Feb. 20, [including Monero](https://decrypt.co/215981/monero-binance-delists-xmr).
 
-- The New York attorney general, Letitia James, has filed a lawsuit against the Winklevoss twins for their involvement in a $1 billion crypto fraud. [Source: <https://www.theguardian.com/us-news/2024/feb/09/new-york-attorney-general-crypto-fraud-lawsuit-winklevoss-twins-letitia-james>]
+- **New York state's attorney general** expanded a previously filed lawsuit against Digital Currency Group, its Genesis Global Capital unit, and Gemini Trust, alleging they engaged in a $3 billion fraud. ([The Guardian](https://www.theguardian.com/us-news/2024/feb/09/new-york-attorney-general-crypto-fraud-lawsuit-winklevoss-twins-letitia-james))
 
-- California is proposing new legislation to regulate the use of artificial intelligence. The proposed law aims to protect consumers from potential harm caused by AI. [Source: <https://www.washingtonpost.com/technology/2024/02/08/california-legislation-artificial-intelligence-regulation/>]
+- **South Korean police arrested** three executives at Haru Invest, a crypto yield platform, for allegedly stealing $828 million in customer funds. ([CoinDesk](https://www.coindesk.com/policy/2024/02/06/haru-invest-execs-arrested-in-south-korea-for-allegedly-stealing-828m-worth-of-crypto-report/))
 
-- Two executives from Haru Invest have been arrested in South Korea for allegedly stealing 828 million won (~$660,000) worth of cryptocurrency. [Source: <https://www.coindesk.com/policy/2024/02/06/haru-invest-execs-arrested-in-south-korea-for-allegedly-stealing-828m-worth-of-crypto-report/>]
-
-- Contrary to popular belief, China never completely banned cryptocurrency. The Chinese government has instead restricted crypto trading and mining, but individuals can still legally hold and transfer cryptocurrencies. [Source: <https://www.coindesk.com/consensus-magazine/2024/02/05/china-never-completely-banned-crypto/>]
-
-- Archaeologists in Italy are using AI to read unreadable ancient scrolls discovered in the ruins of Pompeii. The AI-powered technology can decipher the charred and disintegrated scrolls, providing new insights into ancient history. [Source: <https://decrypt.co/215975/archaeologists-ai-ancient-scrolls-mount-vesuvius>]
+- **AI updates:** A California state senator is [proposing new regulations](https://www.washingtonpost.com/technology/2024/02/08/california-legislation-artificial-intelligence-regulation/) that would require artificial-intelligence companies to test their software for "unsafe" behaviors. In Italy, archaelogistss are using AI to translate delicate, previously unreadable papyrus scrolls salvaged from an eruption of Mt. Vesuvius [2,00 years ago](https://decrypt.co/215975/archaeologists-ai-ancient-scrolls-mount-vesuvius).
 
 # Odds & Ends
 
+- **For a second straight year, crypto companies won't be advertising at the Super Bowl.** Market conditions are greatly improved from a year ago, but companies remain chastened compared to 2022's "Crypto Bowl." Many are instead spending on lobbying Congress or marketing to the masses outside the U.S. ([Fox Business](https://www.foxbusiness.com/markets/crypto-absent-again-super-bowl-ads))
 
-- "Black Mirror" is set to release a new Web3 game, "Smile to Earn Experience," developed by Pixelynx. The game will allow players to earn cryptocurrency by smiling at their devices. [Source: <https://decrypt.co/215410/black-mirror-goes-web3-with-pixelynx-smile-to-earn-experience>]
-
-- Cryptocurrency companies were absent from Super Bowl LVI ads, despite the growing popularity of cryptocurrencies. This absence may be due to the volatile nature of the crypto market and the potential regulatory risks. [Source: <https://www.foxbusiness.com/markets/crypto-absent-again-super-bowl-ads>]
-
+- **Netflix's dystopian tech series Black Mirror** has a new promotional tie-in [built on web3](https://decrypt.co/215410/black-mirror-goes-web3-with-pixelynx-smile-to-earn-experience). (To be specific, it uses Coinbase's layer-2 platform Base.) Called the ["Smile Club"](https://www.blackmirrorexperience.com/register), the new "digital experience" is based on Black Mirror's recent episode titled "Nosedive" in which a social credit scoring system effectively wrecks the characters' lives.
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
