--- a/newsletter/2024-02-11.md
+++ b/newsletter/2024-02-11.md
@@ -12,17 +12,17 @@ But the story often isn't told in quite those terms, is it?
 
 At the very least, I believe the mainstream tech press is missing a huge story hiding in plain sight by not juxtaposing the rise of blockchain versus Big Tech's relative reticence toward it. Something doesn't add up there.
 
-To be sure, Silicon Valley's major venture capital firms are heavily invested in blockchain. But it's a markedly different story among the publicly traded, household-name companies that dominate users' everyday experience of the internet.
+To be sure, Silicon Valley's venture capital firms *are* heavily invested in blockchain. But it's a markedly different story among the publicly traded, household-name tech brands that dominate users' everyday experience of the internet.
 
 There are a few notable exceptions in that cohort, like Meta's stablecoin project that was [eventually killed](https://www.cnet.com/personal-finance/crypto/metas-crypto-project-diem-to-shut-down-after-pushback-from-regulators/). But these outliers ultimately just underscore the general pattern of Silicon Valley's heavyweight public companies staying away crypto.
 
-According to CoinMarketCap, the global token market is currently worth $1.8 *trillion,* by the way. When else have we ever known Big Tech to effectively skip a pot of money that big?
+According to CoinMarketCap, the global token market is currently worth $1.8 *trillion,* by the way. With a "t." When else have we ever known Big Tech to effectively skip a pot of money that big?
 
 Offhand, I see two possible explanations:
 
 The first is that Big Tech's approach should invalidate open, decentralized tools like Bitcoin and Ethereum as consequential innovations that the rest of us should take seriously. After all, the likes of Google, Apple, and Amazon are the smartest guys in the room technically, so we should respect their judgment. Right?
 
-The second possible explanation is rooted more in Big Tech's profit incentives than their technical prowess: Perhaps their neglect of public blockchains tacitly *confirms that such things are their kryptonite.* Not being stupid, Big Tech readily perceives that public chains' core principle of decentralization is ultimately incompatible with their proprietary business models around hoarding user data and purposefully breaking interoperability with competitors' products.  
+The second possible explanation is rooted more in Big Tech's profit incentives than their technical prowess: Perhaps their neglect of public blockchains tacitly *confirms that such things are their kryptonite.* Not being stupid, Big Tech readily perceives that public chains' core principle of decentralization is ultimately incompatible with their proprietary business models around hoarding user data and purposefully breaking compatibility with competitors' products.  
 
 Thus they stay away. But if this reading of the situation is right, it's exactly why the rest of us *should* probably give public blockchains a chance.
 
@@ -46,7 +46,7 @@ Thus they stay away. But if this reading of the situation is right, it's exactly
 
 # Odds & Ends
 
-- **AI updates:** A California state senator is [proposing new regulations](https://www.washingtonpost.com/technology/2024/02/08/california-legislation-artificial-intelligence-regulation/) that would require artificial-intelligence companies to test their software for "unsafe" behaviors. In Italy, archaelogistss are using AI to translate delicate, previously unreadable papyrus scrolls salvaged from an eruption of Mt. Vesuvius [2,00 years ago](https://decrypt.co/215975/archaeologists-ai-ancient-scrolls-mount-vesuvius).
+- **AI updates:** A California state senator is [proposing new regulations](https://www.washingtonpost.com/technology/2024/02/08/california-legislation-artificial-intelligence-regulation/) that would require artificial-intelligence companies to test their software for "unsafe" behaviors. In Italy, archaelogistss are using AI to translate delicate, previously unreadable papyrus scrolls salvaged from an eruption of Mt. Vesuvius [2,000 years ago](https://decrypt.co/215975/archaeologists-ai-ancient-scrolls-mount-vesuvius).
 
 - **Save the sardines!** Writing for Slate, environmental educator Russell Jacobs says we're not paying enough attention to fostering [populations of small sea creatures](https://slate.com/technology/2024/02/ocean-conservation-menhaden-fisheries-fish-oil.html) as a way to improve the oceans' ecology. Hmmm...
 
